--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#imports (same as tuto ML)\n",
@@ -259,10 +257,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# create the TF-IDF vectorizer\n",
@@ -271,10 +267,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import the data we need to use the vectorizer on. Remove as proposed by sci-kit tutorial\n",
@@ -290,10 +284,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# vectors is a sparse matrix\n",
@@ -309,31 +301,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "newsgroup_data = np.array(newsgroups_all)  #convert array to numpy type array\n",
-    "\n",
     "# first we seperate train from the rest. Random_state given to have a seed.\n",
-    "newsgroups_train, newsgroups_inter = train_test_split(newsgroup_data, test_size=0.2, random_state=1)\n",
+    "newsgroups_train, newsgroups_inter, vect_train, vect_inter = train_test_split(newsgroups_all.target, vectors, test_size=0.2, random_state=1)\n",
     "\n",
     "# then we seperate again to get validation and test seperately\n",
-    "newsgroups_test, newsgroups_valid = train_test_split(newsgroups_inter, test_size=0.1, random_state=1)"
+    "newsgroups_test, newsgroups_valid, vect_test, vect_valid = train_test_split(newsgroups_inter, vectors_inter, test_size=0.1, random_state=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultinomialNB(alpha=0.01, class_prior=None, fit_prior=True)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "clf = MultinomialNB(alpha=.01)\n",
-    "clf.fit(vectors, newsgroups_train)"
+    "clf.fit(vect_train, newsgroups_train) #why is order her inversed? not that it should matter"
    ]
   },
   {
@@ -362,7 +359,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -376,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
