--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#imports (same as tuto ML)\n",
@@ -37,7 +39,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "#import the data set\n",
@@ -65,7 +69,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "lalonde_df.groupby(['treat', 'black'])['re78'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "lalonde_df.groupby(['treat', 'hispan'])['re78'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "lalonde_df.groupby('treat')['re78'].describe()"
@@ -76,10 +104,10 @@
    "metadata": {},
    "source": [
     "- We see that there are many less people in the treated group compared to the untreated group.\n",
-    "- The standard deviation for the treated group is much higher, there is more variety in the outcome\n",
-    "- The mean of the untreated group is higher\n",
-    "- but the max salary in the treated group is 3x higher!\n",
-    " - given that the 75% for the untreated group is much higher, this could indicate that the max for the treated group is an outlier"
+    "- Untreated are very homogeneous (smaller std and higher mean)\n",
+    "- The max salary in the treated group is 3x higher! Plus, the 25% mark is much higher (2x)\n",
+    "\n",
+    "==> We see that there are more white people in the untreated group, which may be why the 50% & the 75% marks are this high (the lowest scores are ppl from other ethnicities); in the treated group only 18 people are white, which may explain why there are so many differences (and lower bounds)"
    ]
   },
   {
@@ -92,7 +120,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#define the two categories\n",
@@ -106,7 +136,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "plt.boxplot([treated_salary, untreated_salary], labels=['treated', 'untreated'])\n",
@@ -121,13 +153,15 @@
     "\n",
     "we naively (like us at first) try to use a histogram we will see that taking into account that there are much less people in the treated group, both groups fare similarly.\n",
     "\n",
-    "We note that we have a log-like distribution."
+    "We note that we have a long-tail-like distribution, meaning we may be needing to use a log-log plot."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "#draw the plots on top of each other with same bin size\n",
@@ -143,7 +177,8 @@
    "source": [
     "**Conclusion**\n",
     "\n",
-    "A naive researcher might conlcude that the treatment isn't effective, as the mean salary for the untreated population is higher, but for some individuals is is very effective, hence the outliers."
+    "A naive researcher might conlcude that the treatment isn't effective, as the mean salary for the untreated population is higher, but for some individuals is is very effective, hence the outliers.\n",
+    "==> Does a naive researcher care about the outliers and the fact that elements are biased?"
    ]
   },
   {
@@ -163,7 +198,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#distinct id is useless\n",
@@ -171,16 +208,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We only care about intervals (makes sense to represent them using histograms). We also include boxplots (visual representation of the 5 nbr summary)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "for col in lalonde_df:\n",
+    "intervals = ['age', 'educ', 're74', 're75', 're78']\n",
+    "\n",
+    "for col in intervals:\n",
     "    print('Histogram and 5 number summary for column : ', col)\n",
     "    print('\\n',lalonde_df.groupby('treat')[col].describe())\n",
+    "    plt.title(col)\n",
+    "    plt.boxplot([lalonde_df[untreat][col], lalonde_df[treat][col]], labels=['untreated', 'treated'])\n",
     "    plt.figure()\n",
     "    bins = np.linspace(np.min(lalonde_df[col]),np.max(lalonde_df[col]), 30)\n",
     "    plt.hist(lalonde_df[untreat][col], bins,alpha=0.5)\n",
@@ -192,39 +241,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "we note different distribution in ..."
+    "We note different distributions (need to compare each one alone). Salaries are all long tailed, education is a gaussian, but age has no apparent distribution (maybe Poisson ?!)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Regarding categorical data, we should look at rates (makes much more sense than looking at just the numbers). Thus we define the rates for race, degree and marriage depending on each treat to be able to compare them (pie charts ? we need smthng visual)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "for col in ['age', 'educ', 're74', 're75', 're78']:\n",
-    "    plt.figure()\n",
-    "    plt.title(col)\n",
-    "    plt.boxplot([lalonde_df[untreat][col], lalonde_df[treat][col]], labels=['untreated', 'treated'])"
+    "#Implement pie chart mentioned above"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at the last 3 diagrams, we see that the treated group is slowly catching up the difference in salary."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We also decide to look at the correlation between the variables. "
+    "We also decide to look at the correlation between the variables (is this the best method to do it ? Not better doing it for each treat alone ?). \n",
+    "--> Interesting, but explain why ? And most importantly, explain what we see (degrees are not - linearly - linked to race, all salaries are linked, other obvious stuff like link between educ & degree or age & marriage)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "f, ax = plt.subplots(figsize=(10, 8))\n",
@@ -243,9 +294,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "logistic = linear_model.LogisticRegression()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -257,7 +312,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -271,7 +328,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -285,7 +344,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -314,7 +375,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Test and training set are given already, need to choose how to get validation set. Remove as proposed by tutorial\n",
@@ -325,7 +388,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# We have the data as a list, transform it to a pandas DF. Not sure if needed though.\n",
@@ -351,12 +416,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
@@ -372,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
