Simple answer for 1.03

--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -192,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We look more closely at the data, building a histogram for every column"
+    "We look more closely at the data, building a histogram for every column. Maybe not throw id as important, use new DFs each time (and throw at the appropriate time)"
    ]
   },
   {
@@ -299,7 +299,43 @@
    },
    "outputs": [],
    "source": [
-    "logistic = linear_model.LogisticRegression()"
+    "prop_table = lalonde_df\n",
+    "del prop_table['re78']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "X = prop_table.iloc[:, 1:]\n",
+    "y = prop_table.iloc[:, :1]\n",
+    "y = np.ravel(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "logistic = LogisticRegression()\n",
+    "logistic.fit(X, y)\n",
+    "logistic.score(X, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Is propensity really that simple ? Cf formula in the course (depends on $\\pi_i = p(Z = 1 \\mid x)$)\n",
+    "==> Doesn't work, here we have the probability of success, need to find the exact thing to do (look with Sas & Leo)"
    ]
   },
   {
