Continuing2 with random forest

--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#imports (same as tuto ML)\n",
@@ -21,7 +23,7 @@
     "from sklearn.datasets import fetch_20newsgroups\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn import metrics\n",
     "\n",
     "%matplotlib inline"
@@ -99,7 +101,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#define the two categories\n",
@@ -151,7 +155,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -165,7 +171,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -179,7 +187,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -193,7 +203,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -207,7 +219,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -228,17 +242,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Exercise: Load the 20newsgroup dataset. It is, again, a classic dataset that can directly be loaded using sklearn ([link](http://scikit-learn.org/stable/datasets/twenty_newsgroups.html)).  \n",
-    "[TF-IDF](https://en.wikipedia.org/wiki/Tf%E2%80%93idf), short for term frequency inverse document frequency, is of great help when if comes to compute textual features. Indeed, it gives more importance to terms that are more specific to the considered articles (TF) but reduces the importance of terms that are very frequent in the entire corpus (IDF). Compute TF-IDF features for every article using [TfidfVectorizer](http://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html). Then, split your dataset into a training, a testing and a validation set (10% for validation and 10% for testing). Each observation should be paired with its corresponding label (the article category).\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# create the TF-IDF vectorizer\n",
@@ -251,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the data we need to use the vectorizer on. Remove as proposed by sci-kit tutorial\n",
+    "# Import the data we need to use the vectorizer on. Remove metadata as proposed by sci-kit tutorial\n",
     "newsgroups_all = fetch_20newsgroups(subset='all', remove=('headers', 'footers', 'quotes'))"
    ]
   },
@@ -259,13 +267,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As asked in the question, beforei seperating in subsets, we will use the vectorizer on the compelte set."
+    "As asked in the question, before seperating in subsets, we will use the vectorizer on the complete set."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# vectors is a sparse matrix\n",
@@ -282,51 +292,89 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# first we seperate train from the rest. Random_state given to have a seed.\n",
-    "newsgroups_train, newsgroups_inter, vect_train, vect_inter = train_test_split(newsgroups_all.target, vectors, test_size=0.2, random_state=1)\n",
+    "newsgroups_train, newsgroups_inter, vect_train, vect_inter = \\\n",
+    "    train_test_split(newsgroups_all.target, vectors, test_size=0.2, random_state=1)\n",
     "\n",
     "# then we seperate again to get validation and test seperately\n",
-    "newsgroups_test, newsgroups_valid, vect_test, vect_valid = train_test_split(newsgroups_inter, vectors_inter, test_size=0.1, random_state=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf = MultinomialNB(alpha=.01)\n",
-    "clf.fit(vect_train, newsgroups_train) #why is order her inversed? not that it should matter"
+    "newsgroups_test, newsgroups_valid, vect_test, vect_valid = \\\n",
+    "    train_test_split(newsgroups_inter, vect_inter, test_size=0.5, random_state=1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 2.\n",
+    "\n",
     "Train a random forest on your training set. Try to fine-tune the parameters of your predictor on your validation set using a simple grid search on the number of estimator \"n_estimators\" and the max depth of the trees \"max_depth\". Then, display a confusion matrix of your classification pipeline. Lastly, once you assessed your model, inspect the `feature_importances_` attribute of your random forest and discuss the obtained results.\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we need to train a random forest on our training set. For this, we will use the RandomForestClassifier, as it contains the parameters talked about in the exercise. But first, we need to ask ourselves to wat we want to set the parameters (*max_depth* and *n_estimators*).\n",
+    "\n",
+    "According to the ADA course, we know that the number of trees will be in the 10's and the depth will be betweem 20 to 30. Thus for the training set, we use *n_estimators* to 10 and *max_depth* to 25.\n",
+    "\n",
+    "For the rpedictions, we can't use the training set, as we just trained on it and thus would get very good results regardless. So prediction has to be on the validation set."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# need to find estimators and depth first. We use random_state to have a seed again.\n",
+    "clf = RandomForestClassifier(n_estimators=10, max_depth=25, random_state=1)\n",
+    "clf.fit(vect_train, newsgroups_train)\n",
+    "pred = clf.predict(vect_valid)\n",
+    "metrics.f1_score(newsgroups_valid, pred, average='macro')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see, predictions aren't that great.\n",
+    "\n",
+    "We try to fine tune on the validation set. Note that to do this, we used a double for-loop. We did it several times and just kept the best results to be able to comapre. We started with ranges 10 to 20 for the estimators and 20 and 30 for the depth, but saw that the best fits were steadily raising above 16 for the estimators and was always 30 for the depth (with 33 as a close second). \n",
+    "\n",
+    "Thus, to unclutter results a bit and have less computations, we decided to keep only the relevant numbers for our for loop. We show the rising and falling of results for the best estimators and keep the depth to 30 (as above we have overfitting and below we have worse results)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(40, 50): # we saw that under 15 we get bad results.\n",
+    "    #no warm-state to true so we always get a new forest.\n",
+    "    clf = RandomForestClassifier(n_estimators=i, max_depth=30, random_state=1)\n",
+    "    clf.fit(vect_train, newsgroups_train)\n",
+    "    pred = clf.predict(vect_valid)\n",
+    "    print(\"Values for estimator \", i, \" and depth 30: \", metrics.f1_score(newsgroups_valid, pred, average='macro'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Later on we saw that there was a GridSearch implements in sklearn, so we decided to verify our results using it."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -340,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
