Higher estimator values

--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -17,12 +17,10 @@
     "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
     "from sklearn.preprocessing import OneHotEncoder # is this really needed ?\n",
     "from pandas.plotting import scatter_matrix\n",
-    "from sklearn.model_selection import cross_val_predict\n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import cross_val_predict, cross_val_score, train_test_split, GridSearchCV\n",
     "\n",
     "from sklearn.datasets import fetch_20newsgroups\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn import metrics\n",
     "\n",
@@ -256,7 +254,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Import the data we need to use the vectorizer on. Remove metadata as proposed by sci-kit tutorial\n",
@@ -293,6 +293,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -319,11 +320,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we need to train a random forest on our training set. For this, we will use the RandomForestClassifier, as it contains the parameters talked about in the exercise. But first, we need to ask ourselves to wat we want to set the parameters (*max_depth* and *n_estimators*).\n",
+    "Now we need to train a random forest on our training set. For this, we will use the RandomForestClassifier, as it contains the parameters talked about in the exercise. But first, we need to ask ourselves what we want to set the parameters (*max_depth* and *n_estimators*) to.\n",
     "\n",
-    "According to the ADA course, we know that the number of trees will be in the 10's and the depth will be betweem 20 to 30. Thus for the training set, we use *n_estimators* to 10 and *max_depth* to 25.\n",
+    "According to the ADA course, we know that the number of trees will be in the 10's and the depth will be betweem 20 to 30. Thus for the training set, we set *n_estimators* to 10 and *max_depth* to 25.\n",
     "\n",
-    "For the rpedictions, we can't use the training set, as we just trained on it and thus would get very good results regardless. So prediction has to be on the validation set."
+    "For the predictions, we can't use the training set, as we just trained on it and thus would get very good results regardless. So prediction has to be on the validation set."
    ]
   },
   {
@@ -333,7 +334,7 @@
    "outputs": [],
    "source": [
     "# need to find estimators and depth first. We use random_state to have a seed again.\n",
-    "clf = RandomForestClassifier(n_estimators=10, max_depth=25, random_state=1)\n",
+    "clf = RandomForestClassifier(n_estimators=100, max_depth=25, random_state=1)\n",
     "clf.fit(vect_train, newsgroups_train)\n",
     "pred = clf.predict(vect_valid)\n",
     "metrics.f1_score(newsgroups_valid, pred, average='macro')"
@@ -356,7 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(40, 50): # we saw that under 15 we get bad results.\n",
+    "for i in range(100, 1000, 100): # we saw that under 15 we get bad results.\n",
     "    #no warm-state to true so we always get a new forest.\n",
     "    clf = RandomForestClassifier(n_estimators=i, max_depth=30, random_state=1)\n",
     "    clf.fit(vect_train, newsgroups_train)\n",
@@ -368,8 +369,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "As we can see, te best resuts are when *n_estimators* is set around 44 and *max_depth* is set to 30. As we have a bit of randomness, note that this is not deterministic."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Later on we saw that there was a GridSearch implements in sklearn, so we decided to verify our results using it."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfc = RandomForestClassifier(n_estimators=45, max_depth=30, random_state=1) \n",
+    "\n",
+    "param_grid = { \n",
+    "    'n_estimators': [200, 700],\n",
+    "    'max_depth': [20, 35]\n",
+    "}\n",
+    "\n",
+    "CV_rfc = GridSearchCV(estimator=rfc, param_grid=param_grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CV_rfc.fit(vect_valid, newsgroups_valid)\n",
+    "print(CV_rfc.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we do a confusion matrix on the test set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let us inspect the `feature_importances_` attribute of our random forest."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
