--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -17,7 +17,7 @@
     "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
     "from sklearn.preprocessing import OneHotEncoder # is this really needed ?\n",
     "from pandas.plotting import scatter_matrix\n",
-    "from sklearn.model_selection import cross_val_predict, cross_val_score, train_test_split, GridSearchCV\n",
+    "from sklearn.model_selection import cross_val_predict, cross_val_score, train_test_split, GridSearchCV, PredefinedSplit\n",
     "\n",
     "from sklearn.datasets import fetch_20newsgroups\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -346,9 +346,11 @@
    "source": [
     "As we can see, predictions aren't that great.\n",
     "\n",
-    "We try to fine tune on the validation set. Note that to do this, we used a double for-loop. We did it several times and just kept the best results to be able to comapre. We started with ranges 10 to 20 for the estimators and 20 and 30 for the depth, but saw that the best fits were steadily raising above 16 for the estimators and was always 30 for the depth (with 33 as a close second). \n",
+    "We try to fine tune on the validation set. Note that to do this, we usethe GridSearch implemented in sklearn. We first chose he estimators between 100 and 1000 and a depth between 20 and 30 as it is what we have seen during the lessons, but seeing as the results for the best parameters were the upper limit (30 and 1000) we decided to look if it would still be the same by taking a larger upper limit (35 and 1500).\n",
     "\n",
-    "Thus, to unclutter results a bit and have less computations, we decided to keep only the relevant numbers for our for loop. We show the rising and falling of results for the best estimators and keep the depth to 30 (as above we have overfitting and below we have worse results)."
+    "Also, as we have already our own training, validation and test sets, we need to use *PredefinedSplit* in the GridSearch.\n",
+    "\n",
+    "Please note that the fit takes a lot of time to compute, as there are a very large numbers of estimators."
    ]
   },
   {
@@ -357,42 +359,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(100, 1000, 100): # we saw that under 15 we get bad results.\n",
-    "    #no warm-state to true so we always get a new forest.\n",
-    "    clf = RandomForestClassifier(n_estimators=i, max_depth=30, random_state=1)\n",
-    "    clf.fit(vect_train, newsgroups_train)\n",
-    "    pred = clf.predict(vect_valid)\n",
-    "    print(\"Values for estimator \", i, \" and depth 30: \", metrics.f1_score(newsgroups_valid, pred, average='macro'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As we can see, te best resuts are when *n_estimators* is set around 44 and *max_depth* is set to 30. As we have a bit of randomness, note that this is not deterministic."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Later on we saw that there was a GridSearch implements in sklearn, so we decided to verify our results using it."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rfc = RandomForestClassifier(n_estimators=45, max_depth=30, random_state=1) \n",
-    "\n",
     "param_grid = { \n",
-    "    'n_estimators': [200, 700],\n",
+    "    'n_estimators': [100, 1500],\n",
     "    'max_depth': [20, 35]\n",
     "}\n",
     "\n",
-    "CV_rfc = GridSearchCV(estimator=rfc, param_grid=param_grid)"
+    "CV_rfc = GridSearchCV(estimator=clf, param_grid=param_grid)"
    ]
   },
   {
@@ -401,8 +373,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CV_rfc.fit(vect_valid, newsgroups_valid)\n",
+    "CV_rfc.fit(vect_train, newsgroups_train)\n",
     "print(CV_rfc.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see, te best resuts are when *n_estimators* is set around X and *max_depth* is set to X. "
    ]
   },
   {
